# master-code

./: README.md  runCode
MPI_global_G/: TypeTwo.cpp  TypeTwo.h  main.cpp  ompSolver.h  utilities.cpp
MPI_global_G_2.0/: main.cpp  readFromFile.h  utilities.cpp
MPI_global_G_2.0_backup2/: Basis.cpp  CMakeLists.txt  TypeTwo.cpp  main.cpp  ompSolver.cpp  utilities.cpp  utilities.h
MPI_global_G_3.0_timing/: Basis.cpp  Basis.h  TypeTwo.cpp  TypeTwo.h  main.cpp  ompSolver.cpp  ompSolver.h  utilities.h
MPI_global_G_copy/: TypeTwo.cpp  data_defs.cpp  main.cpp  utilities.h
MPI_global_G_timing/: TypeTwo.cpp  TypeTwo.h  main.cpp  ompSolver.cpp
OMP/: Makefile  Makefile~  basis_solver.cpp  main  main.cpp  runCode  runCode~
OMP_checkConvegence/: Makefile  Makefile~  basis_solver.cpp  basis_solver.h  data_defs.h  main  main.cpp  runCode  runCode~
TT_lock_1.0/: TypeTwo.h  data_defs.h  main.cpp  ompSolver.cpp  ompSolver.h  readFromFile.cpp  readFromFile.h  utilities.cpp  utilities.h
backup2_MPI_global_G/: Basis.cpp  Basis.h  TypeTwo.cpp  TypeTwo.h  main.cpp  utilities.h
backup_MPI_global_G/: TypeTwo.cpp  TypeTwo.h  main.cpp  ompSolver.cpp  utilities.h
backup_MPI_global_G_2.0/: CMakeLists.txt~  TypeTwo.cpp  TypeTwo.h  main.cpp  utilities.h
basisConstructor_commented/: CMakeLists.txt  data_defs.cpp  data_defs.h  distribution.cpp  distribution.h  jacobi.cpp  jacobi.h  main.cpp  readFromFile.cpp  readFromFile.h  runCode  utilities.cpp  utilities.h
checkout-mrst/: mrst-git.sh  mrst-git.sh~  startup_user.m  startup_user.m~
comm_learning/: CMakeLists.txt  CMakeLists.txt~  main.cpp  main2.cpp
comm_learning/cmakedir/: CMakeCache.txt  Makefile  cmake_install.cmake  main  main2
hybrid_1.0/: data_defs.h  distribution.cpp  jacobi.cpp  jacobi.h  main.cpp  runCode
limSendOne/: Basis.cpp  Basis.h  TypeTwo.cpp  data_defs.h  main.cpp  ompSolver.cpp  ompSolver.h
limSendOne_backup/: Basis.h  readFromFile.cpp  utilities.cpp
(+525 files in other folders)
